--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,14 @@ dependencies = [
     "pyyaml==6.0.2",
     "aiohttp[speedups]==3.12.13",
     "asyncpg==0.30.0",
+    "python-json-logger==3.3.0",
+    "py-spy==0.4.0"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
     "ruff>=0.12.0",
     "mypy>=1.16.1",
     "asyncpg-stubs"
